# ocr_nav

./: .gitignore  README.md  environment.yaml  pyproject.toml  ruff.toml
applications/: convert_png_to_jpg.py  create_ground_graph_livox.py  create_text_graph_lidar.py  create_text_graph_rslidar.py  create_traversable_graph_rslidar.py  run_dpsk_ocr_image_folder.py  segment_floor.py  test_annotation_with_qwen3vl.py  test_annotation_with_qwen3vl_batch.py  test_bagio.py  test_cv2_connected_region.py  test_deepseek_ocr_vllm.py  test_depth_assemble.py  test_glim_map_fused_graph_visualization.py  test_graph_rag_construction.py  test_graph_rag_construction_bagio.py  test_graph_rag_query.py  test_ground_mesh_construction_with_folder.py  test_ground_mesh_construction_with_ros.py  test_grounding_dino_sam_segmenter.py  test_image_analysis_with_gpt.py  test_lidar_assemble.py  test_planning_with_ground_mesh_with_folder.py  test_pyvista.py  test_qwen3_small_model.py  test_siglip2.py  test_subscriber_publisher_node.py  test_yaml_output.py  visualize_traversable_graph_in_ros.py
applications/floor_graph/: create_ground_graph_livox.py  create_traversable_graph_rslidar.py  segment_floor.py  test_floor_graph_construction_with_bagio.py  test_floor_graph_construction_with_folder.py  test_floor_graph_construction_with_point_cloud.py  test_floor_graph_construction_with_ros.py  test_glim_map_fused_graph_visualization.py  test_ground_mesh_construction_with_folder.py  test_ground_mesh_construction_with_point_cloud.py  test_planning_with_floor_graph_with_folder.py  test_planning_with_ground_mesh_with_folder.py
applications/llm_reasoning/: test_pydantic_ai_loop.py
applications/ocr_graph/: create_text_graph_rslidar.py  run_dpsk_ocr_image_folder.py  test_deepseek_ocr_vllm.py
applications/playground/: convert_png_to_jpg.py  test_bagio.py  test_dash.py  test_depth_assemble.py  test_grounding_dino_sam_segmenter.py  test_image_analysis_with_gemini.py  test_image_analysis_with_gpt.py  test_interframe_bbox_similarity_computation.py  test_kuzu.py  test_lidar_assemble.py  test_load_point_cloud_and_select_bbox.py  test_pyvis.py  test_pyvista.py  test_pyvista_bbox_widget.py  test_qwen3_small_model.py  test_qwen3vl_vllm.py  test_siglip2.py  test_subscriber_publisher_node.py  test_xfeat_visualization.py  test_yaml_output.py  visualize_traversable_graph_in_ros.py
applications/rag/: test_annotation_with_qwen3vl.py  test_annotation_with_qwen3vl_batch.py  test_annotation_with_qwen3vl_batch_bagio.py  test_coding_agent.py  test_graph_rag_construction.py  test_graph_rag_construction_bagio.py  test_graph_rag_llm_query_with_object_fusion.py  test_graph_rag_planning_with_floor_graph.py  test_graph_rag_pydantic_ai_with_object_fusion.py  test_graph_rag_query.py  test_graph_rag_query_with_object_fusion.py
config/: floor_graph_config.yaml
config/detection/: grounding_dino.yaml
config/llm/: gemini_plus.yaml  gpt.yaml
config/segmentation/: segment_anything.yaml
config/vlm/: gemini.yaml
ocr_nav/agents/: environment_inspection_agent.py  graph_rag_search_agent.py  web_search_agent.py
ocr_nav/matcher/: pc_associator.py  xfeat_matcher.py
ocr_nav/rag/: graph_rag.py
ocr_nav/scene_graph/: floor_graph.py  floor_graph_refactor.py  ground_mesh.py  pose_graph.py  text_graph.py
ocr_nav/skills/: environment_inspection_skills.md  graph_rag_search_skills.md  graph_rag_search_skills.py
ocr_nav/tools/: browser_tools.py  graph_rag_tools.py
ocr_nav/utils/: floor_graph_utils.py  io_utils.py  io_utils_.py  levenshtein_utils.py  mapping_utils.py  ocr_utils.py  pyvista_vis_utils.py  rag_utils.py  segmentation_utils.py  visualization_utils.py  voxel_iou_utils.py
ocr_nav/vlm/: deepseek_ocr.py  gemini_plus.py  prompts.py  (+1 more)
