[project]
authors = [{name = "Chenguang Huang", email = "chuang@rai-inst.com"}]
dependencies = [
    "transformers>=5.3.0,<6", 
    "einops>=0.8.2,<0.9", 
    "easydict>=1.13,<2", 
    "addict>=2.4.0,<3", 
    "pillow", 
    "tqdm>=4.67.3,<5", 
    "pyvista>=0.47.1,<0.48", 
    "plyfile>=1.1.3,<2", 
    "open3d>=0.18.0,<0.19", 
    "kuzu>=0.11.3,<0.12", 
    "sentence-transformers>=5.3.0,<6", 
    "pydantic-ai-slim[google]>=1.70.0,<2", 
]
name = "ocr_nav"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ocr_nav = { path = ".", editable = true }
rai_ai_core_library = { path = "/home/chuang/hcg/projects/control_suite/src/estimation/perception/rai_ai_core_library", editable = true}

[tool.pixi.tasks]
query_rag = "python applications/rag/test_graph_rag_llm_query_with_object_fusion.py"

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = ">=2.10.0,<3"
torchvision = ">=0.25.0,<0.26"
torchaudio = ">=2.10.0,<3"
numpy = ">=2.4.3,<3"
scipy = ">=1.17.1,<2"
ruff = ">=0.15.7,<0.16"
