[project]
authors = [{name = "Chenguang Huang", email = "chuang@rai-inst.com"}]
dependencies = [
]
name = "ocr_nav"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["robostack-humble", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ocr_nav = { path = ".", editable = true }
rai_ai_core_library = { path = "/home/chuang/hcg/projects/control_suite/src/estimation/perception/rai_ai_core_library", editable = true}
kuzu = "*"
pydantic-ai = ">1.0"
google-genai = "*"
sentence-transformers = "*"
huggingface_hub = "*" # Explicitly pin a known safe version
transformers = "*"

[tool.pixi.tasks]
query_rag = "python applications/rag/test_graph_rag_llm_query_with_object_fusion.py"

[tool.pixi.dependencies]
python = "3.11.*"
pytorch = "*"
torchvision = "*"
torchaudio = "*"
numpy = "*"
scipy = "*"
ruff = "*"
hydra-core = "*"
termcolor = "*"
opencv = "*"
pyvis = "*"
einops = "*"
easydict = "*"
addict = "*"
pillow = "*"
tqdm = "*"
pyvista = "*"
plyfile = "*"
open3d = "*"
ros-humble-desktop = ">=0.10.0,<0.11"
importlib-metadata = "<8.8"